fixed layout issues

--- a/properties/styles.css
+++ b/properties/styles.css
@@ -452,6 +452,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  height: 100%;
+  width: 100%;
 }
 
 .recent-projects .container {
@@ -460,6 +463,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  height: 100%;
+  width: 100%;
 }
 
 .recent-grid {
